Fix text resizing on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ a:hover, a:focus {
   transition: all 300ms linear;
   position: center;
   justify-content: center;
-
 }
 
 .fa {
@@ -232,14 +231,19 @@ body {
   /* Safari 7+, Firefox 24+, Chrome 33(?)+, Opera 21+*/
   font-size: 100%;
 }
+@media (min-width: 15em) {
+  body {
+    font-size: 130%;
+  }
+}
 @media (min-width: 36em) {
   body {
-    font-size: 110%;
+    font-size: 120%;
   }
 }
 @media (min-width: 58em) {
   body {
-    font-size: 120%;
+    font-size: 110%;
   }
   body p {
     font-size: 1.143em;
@@ -255,17 +259,7 @@ body {
 }
 @media (min-width: 115em) {
   body {
-    font-size: 125%;
-  }
-}
-@media (min-width: 125em) {
-  body {
-    font-size: 130%;
-  }
-}
-@media (min-width: 145em) {
-  body {
-    font-size: 140%;
+    font-size: 800%;
   }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
